@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE map SYSTEM "http://mapeditor.org/dtd/1.0/map.dtd">
 <map version="1.0" orientation="orthogonal" width="32" height="32" tilewidth="32" tileheight="32">
  <tileset firstgid="1" name="tiles" tilewidth="32" tileheight="32" spacing="2" margin="2">
-  <image source="fixed-ortho-test2.png"/>
+  <image source="fixed-ortho-test2.png" width="640" height="400"/>
  </tileset>
  <layer name="Layer 0" width="32" height="32">
-  <data encoding="base64" compression="gzip">
-   H4sIAAAAAAAAA+3DsQkAIAwAsAriY/7/k6NQXBx00AQSAQAA8Iea3tZTprb4mrLxhAFhdCAKABAAAA==
+  <data encoding="base64" compression="zlib">
+   eJztw7EJACAMALAK4mP+/5OjUFwcdNAEEgEAAPCHmt7WU6a2+Jqy8YQBBPEBRg==
   </data>
  </layer>
  <objectgroup color="#ffffff" name="Object Group 1" width="0" height="0">
@@ -16,6 +15,14 @@
    <properties>
     <property name="friction" value="1.0"/>
    </properties>
+  </object>
+  <object gid="38" x="181" y="818"/>
+  <object gid="38" x="155" y="763"/>
+  <object x="693" y="891">
+   <polygon points="0,0 217,93 215,-96 43,-182"/>
+  </object>
+  <object x="469" y="783">
+   <polyline points="0,0 -51,130 145,173 136,16 40,88"/>
   </object>
  </objectgroup>
 </map>
